@@ -6,61 +6,46 @@ import java.io.InputStreamReader;
 import java.util.List;
 import java.util.zip.GZIPInputStream;
 
-import rx.Observable;
-import rx.functions.Action1;
-import rx.functions.Func0;
-import rx.functions.Func1;
-import rx.observables.StringObservable;
-
 import de.rkraneis.rtree.geometry.Geometries;
 import de.rkraneis.rtree.geometry.Point;
+import java.io.BufferedReader;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import static java.util.stream.Collectors.toList;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 public class GreekEarthquakes {
 
-    static Observable<Entry<Object, Point>> entries() {
-        Observable<String> source = Observable.using(new Func0<InputStream>() {
-            @Override
-            public InputStream call() {
-                try {
-                    return new GZIPInputStream(GreekEarthquakes.class
-                            .getResourceAsStream("/greek-earthquakes-1964-2000.txt.gz"));
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
-            }
-        }, new Func1<InputStream, Observable<String>>() {
-            @Override
-            public Observable<String> call(InputStream is) {
-                return StringObservable.from(new InputStreamReader(is));
-            }
-        }, new Action1<InputStream>() {
-            @Override
-            public void call(InputStream is) {
-                try {
-                    is.close();
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
+    static Stream<Entry<Object, Point>> entries() {
+
+        Stream<String> stream;
+
+        try {
+            final BufferedReader in = new BufferedReader(new InputStreamReader(
+                    new GZIPInputStream(GreekEarthquakes.class
+                            .getResourceAsStream("/greek-earthquakes-1964-2000.txt.gz"))));
+            stream = in.lines();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        return stream.flatMap(line -> {
+            if (line.trim().length() > 0) {
+                String[] items = line.split(" ");
+                double lat = Double.parseDouble(items[0]);
+                double lon = Double.parseDouble(items[1]);
+                return Stream.of(Entry.entry(new Object(),
+                        Geometries.point(lat, lon)));
+            } else {
+                return Stream.empty();
             }
         });
-        return StringObservable.split(source, "\n").flatMap(
-                new Func1<String, Observable<Entry<Object, Point>>>() {
-
-                    @Override
-                    public Observable<Entry<Object, Point>> call(String line) {
-                        if (line.trim().length() > 0) {
-                            String[] items = line.split(" ");
-                            double lat = Double.parseDouble(items[0]);
-                            double lon = Double.parseDouble(items[1]);
-                            return Observable.just(Entry.entry(new Object(),
-                                    Geometries.point(lat, lon)));
-                        } else
-                            return Observable.empty();
-                    }
-                });
     }
 
     static List<Entry<Object, Point>> entriesList() {
-        return entries().toList().toBlocking().single();
+        return entries().collect(toList());
     }
 }
